@@ -6,13 +6,15 @@
 
   * Add eof() and unread_pkt_line() methods to Protocol. (Dave Borowitz)
 
+  * Add write_tree_diff(). (Jelmer Vernooij)
+
  BUG FIXES
 
   * Correct short-circuiting operation for no-op fetches in the server.
     (Dave Borowitz)
 
-  * Support parsing git mbox patches without a version tail, as generated by Mercurial. 
-    (Jelmer Vernooij)
+  * Support parsing git mbox patches without a version tail, as generated by
+    Mercurial.  (Jelmer Vernooij)
 
 0.6.2	2010-10-16
 
